[gd_scene load_steps=16 format=3 uid="uid://d21totgiohura"]

[ext_resource type="Script" path="res://Scenes/Kitten.gd" id="1_17dle"]
[ext_resource type="Texture2D" uid="uid://b2qvqvyqkqgn7" path="res://Assets/Sprites/Cats/Oren.png" id="2_cm8cs"]
[ext_resource type="Shader" path="res://Assets/Shaders/outline.gdshader" id="2_mlcsc"]
[ext_resource type="AudioStream" uid="uid://d3nkp5mitd74s" path="res://Assets/Audio/select_1.ogg" id="3_3m8br"]
[ext_resource type="AudioStream" uid="uid://discxw52hotsi" path="res://Assets/Audio/select_2.ogg" id="4_7kj5f"]
[ext_resource type="Texture2D" uid="uid://ber1uqy8vimlq" path="res://Assets/Sprites/MeatFinished.png" id="4_hrcft"]
[ext_resource type="AudioStream" uid="uid://bbnxy2cjcdbrt" path="res://Assets/Audio/Nyan.ogg" id="7_1qc1p"]

[sub_resource type="CircleShape2D" id="CircleShape2D_c0flx"]
radius = 8.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pucgn"]
shader = ExtResource("2_mlcsc")
shader_parameter/active = true

[sub_resource type="Animation" id="Animation_61356"]
resource_name = "Munch"
length = 0.4
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Rect2(15, 0, 15, 20), Rect2(60, 0, 15, 20)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"munch_fud_anim"
}, {
"args": [],
"method": &"munch_fud_anim"
}]
}

[sub_resource type="Animation" id="Animation_xln0l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(30, 0, 15, 20)]
}

[sub_resource type="Animation" id="Animation_l0mt6"]
resource_name = "Walk"
length = 1.2
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Rect2(30, 0, 15, 20), Rect2(60, 0, 15, 20), Rect2(45, 0, 15, 20), Rect2(60, 0, 15, 20)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mmse7"]
_data = {
"Munch": SubResource("Animation_61356"),
"RESET": SubResource("Animation_xln0l"),
"Walk": SubResource("Animation_l0mt6")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s5kuf"]
bg_color = Color(0.243137, 0.207843, 0.27451, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_epgw7"]
bg_color = Color(0.835294, 0.878431, 0.294118, 1)

[node name="Kitten" type="Area2D"]
collision_layer = 19
collision_mask = 19
script = ExtResource("1_17dle")
item_name = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_c0flx")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_pucgn")
texture = ExtResource("2_cm8cs")
region_enabled = true
region_rect = Rect2(30, 0, 15, 20)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_mmse7")
}
autoplay = "Walk"

[node name="Fud" type="Sprite2D" parent="Sprite2D"]
visible = false
material = SubResource("ShaderMaterial_pucgn")
position = Vector2(0, 2)
texture = ExtResource("4_hrcft")

[node name="Audio" type="Node" parent="."]

[node name="Pick1" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("3_3m8br")

[node name="Pick2" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("4_7kj5f")

[node name="EatTimerProgressBar" type="ProgressBar" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = -8.0
offset_top = -16.0
offset_right = 8.0
offset_bottom = -13.0
theme_override_styles/background = SubResource("StyleBoxFlat_s5kuf")
theme_override_styles/fill = SubResource("StyleBoxFlat_epgw7")
max_value = 8.0
show_percentage = false

[node name="EatTimer" type="Timer" parent="."]
one_shot = true

[node name="Nyan" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_1qc1p")
volume_db = -20.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="animation_finished" from="Sprite2D/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="EatTimer" to="." method="_on_eat_timer_timeout"]
